@@ -42,6 +42,7 @@ Bugs fixed:
 - 3484083 Exclude SFCBIndicationID
 - 3496383 Faster Return from CBDeliverIndication
 - 3416060 sigsegv in tool_mm_flush()
+- 3497096 double free during stopProc
 
 Changes in 1.3.13
 =================
